# sign_language

sign_language_4/: BUILD.gn  tcp_server_demo.c
sign_language_4/oled/: oled_demo.c  oled_demo.h  oledfont.h
sign_language_4/src/: E53_SC2.c
sign_language_4/uart/: syn6288.c  syn6288.h  uart_control.c  uart_control.h
