# Copyright (c) 2020 Nanjing Xiaoxiongpai Intelligent Technology Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

config_file = [ "//vendor/bearpi/bearpi_hm_nano/common/third_party/libs/libiot_link.a" ]
copy("config") {
  sources = config_file
  outputs = [ "//out/hispark_pegasus/wifiiot_hispark_pegasus/libs/{{source_file_part}}" ]
}

static_library("sign_language") {
  sources = [
    "tcp_server_demo.c",
    "src/E53_SC2.c",
    "src/wifi_connect.c",
    "oled/oled_demo.c",
    "uart/hal_iot_gpio_ex.c",
    "uart/uart_control.c",
    "uart/syn6288.c"
  ]

  include_dirs = [
    "//base/iot_hardware/peripheral/interfaces/kits",
    "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals/include",
    "//foundation/communication/wifi_lite/interfaces/wifiservice",
    "//third_party/cJSON",
    "//vendor/bearpi/bearpi_hm_nano/common/third_party/iot_link/oc_mqtt/oc_mqtt_al",
    "//vendor/bearpi/bearpi_hm_nano/common/third_party/iot_link/oc_mqtt/oc_mqtt_profile_v5",
    "//vendor/bearpi/bearpi_hm_nano/common/third_party/iot_link/inc",
    "include",
    "oled",
    "//src/third_party/cJSON",
    "//utils/native/lite/include",
    "//kernel/liteos_m/components/cmsis/2.0",
    "//applications/sample/wifi-iot/app/max30102_demo",
    "max30102",
    "//device/hisilicon/hispark_pegasus/sdk_liteos/third_party/lwip_sack/include/lwip",
    "//device/hisilicon/hispark_pegasus/sdk_liteos/platform/os/Huawei_LiteOS/components/lib/libc/musl/include",

    "uart",
    "//kernel/liteos_m/kal/cmsis",
    "//device/soc/hisilicon/hi3861v100/sdk_liteos/include/base",
  ]

  deps = [ ":config" ]
  deps += [ "//vendor/bearpi/bearpi_hm_nano/common/iot_hardware_hals:bearpi_iot_hardware_hals" ]
}
